fix: align

--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -83,6 +83,10 @@
     vertical-align: middle;
 }
 
+.bi:before {
+    line-height: unset;
+}
+
 .description {
     display: flex;
     align-items: center;
